--- a/src/components/Carrinho/Carrinho.css
+++ b/src/components/Carrinho/Carrinho.css
@@ -12,9 +12,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-   
     width: 330px;
     height: 30px;
+    margin-bottom:20px;;
     
   }
   
