--- a/src/components/ItensCarrinho/ItensCarrinho.css
+++ b/src/components/ItensCarrinho/ItensCarrinho.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     width: 330px;
     border-bottom: 0.5px solid lightgrey;
+    margin-bottom: 20px;
 }
 
 .item-carrinho-total-delete {
