resolvido problema de scroll

--- a/src/components/Cabecalho/Cabecalho.css
+++ b/src/components/Cabecalho/Cabecalho.css
@@ -1,9 +1,11 @@
-.toolbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 120px;
+header {
+  position:absolute; 
+  top:0px; 
+  left:0px; 
+  height:120px; 
+  right:0px;
+  overflow:hidden;
+ 
   display: flex;
   align-items: center;
   background-color: #f6a800;
@@ -11,15 +13,12 @@
   font-weight: 600;
   border-bottom: 2px solid #441e1f;
 }
-
 .container-titulo {
   margin-left: 10px;
-
   justify-content: left;
 }
 .nome-estabelecimento {
   color: #441e1f;
-
   font-size: 20px;
   text-align: center;
   font-weight: bold;
@@ -31,12 +30,10 @@
   color: #441e1f;
   font-size: 16px;
 }
-
 .telefone-estabelecimento {
   color: #441e1f;
   font-size: 16px;
 }
-
 .titulo {
   font-style: italic;
   margin: 20px;
