--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,12 @@
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
+footer {
+    position:absolute; 
+    bottom:0px; 
+    height:50px; 
+    left:0px; 
+    right:0px; 
+    overflow:hidden;
+
+   
     background-color: #f6a800;
     color: #441e1f;
     text-align: center;
@@ -13,11 +16,9 @@
     justify-content: space-between;
     align-items: center;
   }
-
   .left {
     padding-left: 10px;
   }
-  
   .right {
     padding-right: 10px;
   }
@@ -31,6 +32,4 @@
   }
   .p-itens-carrinho {
     margin-left: 5px;
-   
-    
-  }
+   }
