--- a/src/components/ProdutosList/ProdutosList.css
+++ b/src/components/ProdutosList/ProdutosList.css
@@ -7,18 +7,27 @@
 .containerInput {
   display: flex;
   justify-content: center;
-  background-color:white;
+  
+  border-radius: 5px;
+      
+     
+      align-items: center;
+      justify-content: space-between;
+      border: 0.5px solid lightgray;
+      padding: 10px;
+
+ 
   
 }
 
 .inputPesquisa {
   width: 100%;
-  margin: 10px;
+ 
   height: 30px;
-  border-width: 1px;
-  border-radius: 5px;
-  padding: 5px;
+  
+
   font-size: 16px;
+  border:none;
 }
 
 input:focus {
