--- a/src/components/ProdutosList/ProdutosList.css
+++ b/src/components/ProdutosList/ProdutosList.css
@@ -7,25 +7,17 @@
 .containerInput {
   display: flex;
   justify-content: center;
-  
   border-radius: 5px;
-      
-     
-      align-items: center;
-      justify-content: space-between;
-      border: 0.5px solid lightgray;
-      padding: 10px;
-
- 
-  
+  align-items: center;
+  justify-content: space-between;
+  border: 0.5px solid lightgray;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 .inputPesquisa {
   width: 100%;
- 
   height: 30px;
-  
-
   font-size: 16px;
   border:none;
 }
